# Quadruple-Three-Address-Code-in-C

./: CMakeLists.txt  README.md
include/: Quad.h
src/: Quad.c
